# man2man

./: README.md  man2man.py  pyproject.toml
